2007-05-27  Naba Kumar  <naba@gnome.org>

	* manuals/anjuta-manual/C/projects.xml,
	manuals/anjuta-manual/C/projects.xml: Updated project
	management chapter more.

2007-05-25  Johannes Schmid <jhs@gnome.org>

	* plugins/build-basic-autotools/anjuta-build-basic-autotools-plugin.glade:
	* plugins/build-basic-autotools/build-basic-autotools.c:
	(on_sb_check_toggled), (build_execute_command),
	(ipreferences_merge), (ipreferences_unmerge):
	Added support for building inside scratchbox environment
	
	Patch from James Liggett <jrliggett@cox.net>:
	* plugins/message-view/anjuta-msgman.c: (anjuta_msgman_page_new),
	(anjuta_msgman_append_view):

	Fix 440866 
	  – Anjuta aborts with numerous assertion failures when adding a new message view tab

2007-05-23  Naba Kumar  <naba@gnome.org>

	* manuals/anjuta-manual/C/projects.xml: Updated project
	management chapter.

2007-05-22  Naba Kumar  <naba@gnome.org>

	* manuals/anjuta-manual/C/projects.xml: More updates.

	* manuals/anjuta-manual/C/introduction.xml,
	manuals/anjuta-manual/C/projects.xml,
	manuals/anjuta-manual/C/interface.xml: Updated documentation.

2007-05-22  Naba Kumar  <naba@gnome.org>

	Patch from Étienne Bersac:
	* plugins/class-gen/templates/go-source.tpl: use G_TYPE_DEFINE parent
	class in generated class.

2007-05-22  Naba Kumar  <naba@gnome.org>

	* plugins/profiler/plugin.c: Fixed a compiler warning.
	* plugins/valgrind/Makefile.am: Added ldflags.

	Patch from James Liggett:
	* plugins/profiler/gprof-options.[ch], plugins/profiler/plugin.[ch],
	plugins/profiler/Makefile.am: Fixes bug #403503. Implemented target
	specific options.

2007-05-18  Johannes Schmid <jhs@gnome.org>

	* plugins/editor/text_editor.c:
	* plugins/language-support-cpp-java/plugin.c:
	(on_editor_language_changed), (on_value_added_current_editor),
	(on_value_removed_current_editor):
	
	Remove IAnjutaEditorAssist from Scintilla for now as it is not supported
	Fix assist support in language-support-plugin.
