@@ -1,3 +1,10 @@
+2007-05-27  Johannes Schmid <jhs@gnome.org>
+
+	* plugins/build-basic-autotools/build-basic-autotools.c:
+	(get_real_directory), (on_build_mesg_format):
+	
+	Find correct files for error messages inside scratchbox
+
 2007-05-27  Naba Kumar  <naba@gnome.org>
 
 	* manuals/anjuta-manual/C/projects.xml,
